--- a/eng/application-content.html
+++ b/eng/application-content.html
@@ -251,108 +251,112 @@
         
         <div class="content_detail">
             <div class="content_detail_inner d-flex flex-wrap align-items-center">
-                <div class="content_detail_pic application_detail_pic">
-                    <div class="content_detail_pic_inner" data-aos="fade-right" data-aos-duration="800"><img src="../public/img/application-pic-1.png" alt=""></div>
-                </div>
-                <div class="content_detail_text application_detail_text">
-                    <h2>aerospace industry</h2>
-                    <p class="application_detail_content">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam malesuada fermentum hendrerit. Quisque rutrum eros malesuada laoreet bibendum. Sed et felis quis elit ornare gravida non quis augue. Ut vehicula metus eget magna vulputate, vitae viverra lectus vulputate. Sed vitae condimentum nisl, non laoreet lectus. Donec eleifend nibh nunc, id finibus ex bibendum non. 
-                    </p>
+                <div class="news_detail_inner">
+                    <div class="content_detail_pic application_detail_pic">
+                        <div class="content_detail_pic_inner" data-aos="fade-right" data-aos-duration="800"><img src="../public/img/application-pic-1.png" alt=""></div>
+                    </div>
+                    <div class="content_detail_text application_detail_text">
+                        <h2>aerospace industry</h2>
+                        <p class="application_detail_content">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam malesuada fermentum hendrerit. Quisque rutrum eros malesuada laoreet bibendum. Sed et felis quis elit ornare gravida non quis augue. Ut vehicula metus eget magna vulputate, vitae viverra lectus vulputate. Sed vitae condimentum nisl, non laoreet lectus. Donec eleifend nibh nunc, id finibus ex bibendum non. 
+                        </p>
+                    </div>
                 </div>
                 <div class="product-list-inner application_pdList">
-                    <div class="row">
-                        <div class="col-xl-6">
-                            <div class="position-relative" data-aos="fade-up" data-aos-duration="800">
-                                <a class="product-list-inner_item d-flex flex-wrap align-items-center" href="./product-content.html">
-                                    <div class="product-list-inner_pic"><img src="../public/img/product-PP-13D.png" alt=""></div>
-                                    <div class="product-list-inner_text">
-                                        <h2>Universal Cutter Grinder (PP-32N)</h2>
-                                        <p>The wheel heads can be rotated 360° and be installed two wheels. Just rotate the wheel head, when need to grind the tool of different materials</p>
-                                    </div>
-                                </a>
-                                <button class="btn-inquiry btn-iconText">
-                                    <img src="../public/img/icon-cart.svg" alt="">
-                                    <span>Inquiry</span>
-                                </button>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xl-6">
+                                <div class="position-relative" data-aos="fade-up" data-aos-duration="800">
+                                    <a class="product-list-inner_item d-flex flex-wrap align-items-center" href="./product-content.html">
+                                        <div class="product-list-inner_pic"><img src="../public/img/product-PP-13D.png" alt=""></div>
+                                        <div class="product-list-inner_text">
+                                            <h2>Universal Cutter Grinder (PP-32N)</h2>
+                                            <p>The wheel heads can be rotated 360° and be installed two wheels. Just rotate the wheel head, when need to grind the tool of different materials</p>
+                                        </div>
+                                    </a>
+                                    <button class="btn-inquiry btn-iconText">
+                                        <img src="../public/img/icon-cart.svg" alt="">
+                                        <span>Inquiry</span>
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-xl-6">
-                            <div class="position-relative" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                                <a class="product-list-inner_item d-flex flex-wrap align-items-center" href="./product-content.html">
-                                    <div class="product-list-inner_pic"><img src="../public/img/product-PP-13SG.png" alt=""></div>
-                                    <div class="product-list-inner_text">
-                                        <h2>Universal Tool & Cutter Grinder (PP-600 / PP-600-DW)</h2>
-                                        <p>The wheel head is with 4 axises. There are two types of wheel head: single or double.
-                                            Adopt high precision cross roller guide on the</p>
-                                    </div>
-                                </a>
-                                <button class="btn-inquiry btn-iconText">
-                                    <img src="../public/img/icon-cart.svg" alt="">
-                                    <span>Inquiry</span>
-                                </button>
+                            <div class="col-xl-6">
+                                <div class="position-relative" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                                    <a class="product-list-inner_item d-flex flex-wrap align-items-center" href="./product-content.html">
+                                        <div class="product-list-inner_pic"><img src="../public/img/product-PP-13SG.png" alt=""></div>
+                                        <div class="product-list-inner_text">
+                                            <h2>Universal Tool & Cutter Grinder (PP-600 / PP-600-DW)</h2>
+                                            <p>The wheel head is with 4 axises. There are two types of wheel head: single or double.
+                                                Adopt high precision cross roller guide on the</p>
+                                        </div>
+                                    </a>
+                                    <button class="btn-inquiry btn-iconText">
+                                        <img src="../public/img/icon-cart.svg" alt="">
+                                        <span>Inquiry</span>
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-xl-6">
-                            <div class="position-relative" data-aos="fade-up" data-aos-duration="800">
-                                <a class="product-list-inner_item d-flex flex-wrap align-items-center" href="./product-content.html">
-                                    <div class="product-list-inner_pic"><img src="../public/img/product-PP-13D.png" alt=""></div>
-                                    <div class="product-list-inner_text">
-                                        <h2>Universal Cutter Grinder (PP-32N)</h2>
-                                        <p>The wheel heads can be rotated 360° and be installed two wheels. Just rotate the wheel head, when need to grind the tool of different materials</p>
-                                    </div>
-                                </a>
-                                <button class="btn-inquiry btn-iconText">
-                                    <img src="../public/img/icon-cart.svg" alt="">
-                                    <span>Inquiry</span>
-                                </button>
+                            <div class="col-xl-6">
+                                <div class="position-relative" data-aos="fade-up" data-aos-duration="800">
+                                    <a class="product-list-inner_item d-flex flex-wrap align-items-center" href="./product-content.html">
+                                        <div class="product-list-inner_pic"><img src="../public/img/product-PP-13D.png" alt=""></div>
+                                        <div class="product-list-inner_text">
+                                            <h2>Universal Cutter Grinder (PP-32N)</h2>
+                                            <p>The wheel heads can be rotated 360° and be installed two wheels. Just rotate the wheel head, when need to grind the tool of different materials</p>
+                                        </div>
+                                    </a>
+                                    <button class="btn-inquiry btn-iconText">
+                                        <img src="../public/img/icon-cart.svg" alt="">
+                                        <span>Inquiry</span>
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-xl-6">
-                            <div class="position-relative" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                                <a class="product-list-inner_item d-flex flex-wrap align-items-center" href="./product-content.html">
-                                    <div class="product-list-inner_pic"><img src="../public/img/product-PP-13SG.png" alt=""></div>
-                                    <div class="product-list-inner_text">
-                                        <h2>Universal Tool & Cutter Grinder (PP-600 / PP-600-DW)</h2>
-                                        <p>The wheel head is with 4 axises. There are two types of wheel head: single or double.
-                                            Adopt high precision cross roller guide on the</p>
-                                    </div>
-                                </a>
-                                <button class="btn-inquiry btn-iconText">
-                                    <img src="../public/img/icon-cart.svg" alt="">
-                                    <span>Inquiry</span>
-                                </button>
+                            <div class="col-xl-6">
+                                <div class="position-relative" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                                    <a class="product-list-inner_item d-flex flex-wrap align-items-center" href="./product-content.html">
+                                        <div class="product-list-inner_pic"><img src="../public/img/product-PP-13SG.png" alt=""></div>
+                                        <div class="product-list-inner_text">
+                                            <h2>Universal Tool & Cutter Grinder (PP-600 / PP-600-DW)</h2>
+                                            <p>The wheel head is with 4 axises. There are two types of wheel head: single or double.
+                                                Adopt high precision cross roller guide on the</p>
+                                        </div>
+                                    </a>
+                                    <button class="btn-inquiry btn-iconText">
+                                        <img src="../public/img/icon-cart.svg" alt="">
+                                        <span>Inquiry</span>
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-xl-6">
-                            <div class="position-relative" data-aos="fade-up" data-aos-duration="800">
-                                <a class="product-list-inner_item d-flex flex-wrap align-items-center" href="./product-content.html">
-                                    <div class="product-list-inner_pic"><img src="../public/img/product-PP-13D.png" alt=""></div>
-                                    <div class="product-list-inner_text">
-                                        <h2>Universal Cutter Grinder (PP-32N)</h2>
-                                        <p>The wheel heads can be rotated 360° and be installed two wheels. Just rotate the wheel head, when need to grind the tool of different materials</p>
-                                    </div>
-                                </a>
-                                <button class="btn-inquiry btn-iconText">
-                                    <img src="../public/img/icon-cart.svg" alt="">
-                                    <span>Inquiry</span>
-                                </button>
+                            <div class="col-xl-6">
+                                <div class="position-relative" data-aos="fade-up" data-aos-duration="800">
+                                    <a class="product-list-inner_item d-flex flex-wrap align-items-center" href="./product-content.html">
+                                        <div class="product-list-inner_pic"><img src="../public/img/product-PP-13D.png" alt=""></div>
+                                        <div class="product-list-inner_text">
+                                            <h2>Universal Cutter Grinder (PP-32N)</h2>
+                                            <p>The wheel heads can be rotated 360° and be installed two wheels. Just rotate the wheel head, when need to grind the tool of different materials</p>
+                                        </div>
+                                    </a>
+                                    <button class="btn-inquiry btn-iconText">
+                                        <img src="../public/img/icon-cart.svg" alt="">
+                                        <span>Inquiry</span>
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-xl-6">
-                            <div class="position-relative" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                                <a class="product-list-inner_item d-flex flex-wrap align-items-center" href="./product-content.html">
-                                    <div class="product-list-inner_pic"><img src="../public/img/product-PP-13SG.png" alt=""></div>
-                                    <div class="product-list-inner_text">
-                                        <h2>Universal Tool & Cutter Grinder (PP-600 / PP-600-DW)</h2>
-                                        <p>The wheel head is with 4 axises. There are two types of wheel head: single or double.
-                                            Adopt high precision cross roller guide on the</p>
-                                    </div>
-                                </a>
-                                <button class="btn-inquiry btn-iconText">
-                                    <img src="../public/img/icon-cart.svg" alt="">
-                                    <span>Inquiry</span>
-                                </button>
+                            <div class="col-xl-6">
+                                <div class="position-relative" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                                    <a class="product-list-inner_item d-flex flex-wrap align-items-center" href="./product-content.html">
+                                        <div class="product-list-inner_pic"><img src="../public/img/product-PP-13SG.png" alt=""></div>
+                                        <div class="product-list-inner_text">
+                                            <h2>Universal Tool & Cutter Grinder (PP-600 / PP-600-DW)</h2>
+                                            <p>The wheel head is with 4 axises. There are two types of wheel head: single or double.
+                                                Adopt high precision cross roller guide on the</p>
+                                        </div>
+                                    </a>
+                                    <button class="btn-inquiry btn-iconText">
+                                        <img src="../public/img/icon-cart.svg" alt="">
+                                        <span>Inquiry</span>
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
