--- a/eng/introduction.html
+++ b/eng/introduction.html
@@ -239,17 +239,16 @@
         <div class="page-banner page-banner-about">
             <div class="page-banner_mask"></div>
             <img class="page-banner_style" src="../public/img/innerPage-style.png" alt="">
-            <h1 data-aos="fade-down" data-aos-duration="800">Introduction</h1>
+            <h1 data-aos="fade-down" data-aos-duration="800">About</h1>
         </div>
         <nav aria-label="breadcrumb" class="container">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-              <li class="breadcrumb-item">About</li>
-              <li class="breadcrumb-item active" aria-current="page">Introduction</li>
+              <li class="breadcrumb-item active" aria-current="page">About</li>
             </ol>
         </nav>
         
-        <ul class="nav nav-tabs tab-common tab-about">
+        <!-- <ul class="nav nav-tabs tab-common tab-about">
             <li class="nav-item">
               <a href="" class="nav-link active"><span>Introduction</span></a>
             </li>
@@ -259,9 +258,9 @@
             <li class="nav-item">
               <a href="" class="nav-link"><span>History</span></a>
             </li>
-        </ul>
+        </ul> -->
 
-        <div class="company">
+        <!-- <div class="company">
             <div class="company_inner">
                 <img class="company_style" src="../public/img/CompanyProfile-style.png" alt="">
                 <img class="company_pic d-lg-block d-none" data-aos="fade-right" data-aos-duration="800" src="../public/img/companyPrifile-pic.png" alt="">
@@ -279,6 +278,53 @@
                 <div class="home-bussiness_inner">
                     <h2 class="title-home" data-aos="fade-up" data-aos-duration="800">Business Philosophy</h2>
                     <p class="intro_content" data-aos="fade-down" data-aos-duration="800">PEIPING upholds the business philosophy of “Sustainability, Growth and Excellence.” With changes in time, we have imported the advanced technology and developed the high technical products to meet the customers’ needs. At present, PEIPING is the main manufacturer of tool and cutter grinder in Taiwan. Especially, we are the only producer for big diameter drill grinder (Biggest grinding diameter: 100mm).</p>
+                </div>
+            </div>
+        </div> -->
+
+        <div class="about_content">
+            <div class="container">
+                <div class="about_content_item">
+                    <div class="about_content_pic">
+                        <img src="../public/img/about-1.png" alt="">
+                    </div>
+                    <div class="about_content_text">
+                        <h2 class="title-home" data-aos="fade-up" data-aos-duration="800">Company Profile</h2>
+                        <p class="intro_content" data-aos="fade-down" data-aos-duration="800">PEIPING Precision Enterprise Co., Ltd. was established in 1980 and has been dedicated to the research and improvement of tool and cutter grinder all the time. All of the products have passed the quality inspection precisely. In addition, PEIPING Precision Enterprise Co., Ltd. had gotten the Gold Medal winner at Geneva Invention and had many kinds of patents: No. 75717, 42447, 21204 etc. The quality of products is trustworthy by the customers.</p>
+                    </div>
+                </div>
+                <div class="about_content_item">
+                    <div class="about_content_pic">
+                        <img src="../public/img/about-2.png" alt="">
+                    </div>
+                    <div class="about_content_text">
+                        <h2 class="title-home" data-aos="fade-up" data-aos-duration="800">Business Philosophy</h2>
+                        <p class="intro_content" data-aos="fade-down" data-aos-duration="800">PEIPING upholds the business philosophy of “Sustainability, Growth and Excellence.” With changes in time, we have imported the advanced technology and developed the high technical products to meet the customers’ needs. At present, PEIPING is the main manufacturer of tool and cutter grinder in Taiwan. Especially, we are the only producer for big diameter drill grinder (Biggest grinding diameter: 100mm).</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="about_eh">
+            <div class="container">
+                <div class="about_equip">
+                    <div class="about_content_pic">
+                        <img src="../public/img/about-3.png" alt="">
+                    </div>
+                    <div class="about_equip_title" data-aos="fade-up" data-aos-duration="800">Equipment</div>
+                </div>
+                <div class="about_history">
+                    <div class="about_content_pic">
+                        <img src="../public/img/about-4.png" alt="">
+                    </div>
+                    <div class="about_history_text">
+                        <h2 class="title-home" data-aos="fade-up" data-aos-duration="800">History</h2>
+                        <p class="intro_content" data-aos="fade-down" data-aos-duration="800">
+                            40年來在刀具研磨領域不斷研發創新，屢獲國內外獎項及相關專利。<br>
+                            從單一功能鑽頭研磨機，進而研發萬能工具磨床，一機多功能提升效率。<br>
+                            近期開始研發NC工具研磨機及CNC工具研磨站，專為大量且專用刀具工具設計。
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
