--- a/eng/news-content.html
+++ b/eng/news-content.html
@@ -252,7 +252,7 @@
         </nav>
         
         <div class="content_detail">
-            <div class="content_detail_inner d-flex flex-wrap align-items-center">
+            <div class="content_detail_inner news_detail_inner d-flex flex-wrap align-items-center">
                 <div class="content_detail_pic news_detail_pic">
                     <div class="content_detail_pic_inner" data-aos="fade-right" data-aos-duration="800"><img src="../public/img/news-pic.png" alt=""></div>
                 </div>
