--- a/eng/introduction.html
+++ b/eng/introduction.html
@@ -320,9 +320,9 @@
                     <div class="about_history_text">
                         <h2 class="title-home" data-aos="fade-up" data-aos-duration="800">History</h2>
                         <p class="intro_content" data-aos="fade-down" data-aos-duration="800">
-                            40年來在刀具研磨領域不斷研發創新，屢獲國內外獎項及相關專利。<br>
-                            從單一功能鑽頭研磨機，進而研發萬能工具磨床，一機多功能提升效率。<br>
-                            近期開始研發NC工具研磨機及CNC工具研磨站，專為大量且專用刀具工具設計。
+                            PEIPING PRECISION has been dedicated to the research and improvement in tool and cutter grinding field for 40 years. PEIPING PRECISION had gotten the medal and related patents.<br>
+From single function drill grinder to universal tool & cutter grinder, we believe our product could be multi-functional and help our customers to increase efficiency.<br>
+Recently, we have do the R&D on NC tool grinder and CNC Tool Grinder which are designed for the users of the special tool & cutter mass production.
                         </p>
                     </div>
                 </div>
